# aurora-emu

./: .gitignore  12_Build for iOS device (arm64).txt  8_Build for iOS device (arm64).txt  9_Build for iOS device (arm64).txt  CMakeLists.txt  Makefile  Package.swift  README.md  main.c  project.yml
.github/workflows/: ios-device-app-build.yml  ios-device-cmake.yml  ios-device-release.yml  ios-swift-device.yml  linux-build.yml
AuroraIOS/: Metal.m
AuroraIOS/Controllers/: AURControllerSkinsViewController.h  AUREmulatorViewController.h
AuroraIOS/Models/: AURControllerSkin.m  AURGame.h
AuroraIOS/Views/: AURControllerView.h
Config/: Info.plist  Project.plist
Dependicies/FLAC.xcframework/: Info.plist
Dependicies/FLAC.xcframework/ios-arm64/FLAC.framework/: FLAC  Info.plist
Dependicies/FLAC.xcframework/ios-arm64_x86_64-simulator/FLAC.framework/: FLAC  Info.plist
Dependicies/FLAC.xcframework/tvos-arm64/FLAC.framework/: FLAC  Info.plist
Dependicies/FLAC.xcframework/tvos-arm64_x86_64-simulator/FLAC.framework/: FLAC  Info.plist
Dependicies/SDL3.xcframework/: Info.plist
Dependicies/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3
Dependicies/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
Dependicies/Sources/cryptopp/: dlltest.cpp
Dependicies/libavcodec.xcframework/: Info.plist
Dependicies/libavfilter.xcframework/ios-arm64-simulator/libavfilter.framework/: libavfilter
Dependicies/libavformat.xcframework/: Info.plist
Dependicies/libboostcontext.xcframework/: Info.plist
Dependicies/libboostiostreams.xcframework/: Info.plist
Dependicies/libboostprogramoptions.xcframework/: Info.plist
Dependicies/libboostserialization.xcframework/: Info.plist
Dependicies/libdynarmic.xcframework/: Info.plist
Dependicies/libenet.xcframework/: Info.plist
Dependicies/libfaad2.xcframework/: Info.plist
Dependicies/libfmt.xcframework/: Info.plist
Dependicies/libgenericcodegen.xcframework/: Info.plist
Dependicies/libglslang.xcframework/: Info.plist
Dependicies/libmachineindependent.xcframework/: Info.plist
Dependicies/libmcl.xcframework/: Info.plist
Dependicies/libopenal.xcframework/: Info.plist
Dependicies/libsirit.xcframework/: Info.plist
Dependicies/libsoundtouch.xcframework/: Info.plist
Dependicies/libswresample.xcframework/: Info.plist
Dependicies/libteakra.xcframework/: Info.plist
SharedDependencies/: Package.swift  download_xcframeworks.sh
SharedDependencies/Sources/SharedDependencies/: SharedDependencies.cpp  SharedDependencies.swift
SharedDependencies/XCFrameworks/: MoltenVK.xcframework  libavcodec.xcframework  libavfilter.xcframework  libavformat.xcframework  libavutil.xcframework  libswresample.xcframework  libswscale.xcframework
SharedDependencies/libavfilter.xcframework/: Info.plist
SharedDependencies/libavutil.xcframework/: Info.plist
SharedDependencies/libswscale.xcframework/: Info.plist
ios/: Podfile  project.yml
ios/AuroraIOS/: AURAppDelegate.m  AURSceneDelegate.h  AURSceneDelegate.m  Metal.h  Metal.m
ios/AuroraIOS/Controllers/: AURControllerSkinsViewController.m  AUREmulatorViewController.mm  AURInGameMenuViewController.h  AURInGameMenuViewController.m  AURLibraryViewController.h  AURLibraryViewController.m  AURPreferredControllerSkinsViewController.h  AURPreferredControllerSkinsViewController.m  AURSettingsViewController.m
ios/AuroraIOS/Managers/: AURBoxArtManager.h  AURBoxArtManager.m  AURDatabaseManager.h  AURDatabaseManager.m  AURExternalControllerManager.h  AURExternalControllerManager.m  AURLogManager.h  AURLogManager.m  AURSkinImageOperation.h  AURSkinImageOperation.m  AURSkinManager.h  AURSkinManager.m
ios/AuroraIOS/Models/: AURControllerSkin.h  AURControllerSkinConfigurations.h  AURControllerSkinTraits.h  AURControllerSkinTraits.m  AURDeltaSkin.h  AURDeltaSkin.m
ios/AuroraIOS/Views/: AURBackgroundView.h  AURBackgroundView.m  AURControllerSkinTableViewCell.h  AURControllerSkinTableViewCell.m  AURControllerView.m  AURGameCollectionViewCell.h
scripts/: extract_min_cryptopp.py  fetch_boost_headers.sh  fetch_third_party_headers.sh  nds_melonds_bundle.sh  vendor_cryptopp_minimal.py
src/core/: README.md  STRUCTURE.md  core_adapter.hpp  core_adapter_registry.cpp  emulator_core_c_api.h  gba_core_c_api.h
src/core/api/: emulator_core_c_api.cpp  emulator_core_c_api.h  frontend_utils.cpp  frontend_utils.h  gba_core_c_api.h
src/core/aurora3ds/: bridge.cpp  bridge.h  core_adapter.cpp  httplib.h
src/core/aurora3ds/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_sink.cpp  dsp_interface.h  input_details.cpp  input_details.h  sink_details.cpp  sink_details.h  time_stretch.cpp
src/core/aurora3ds/audio_core/hle/: aac_decoder.cpp  hle.cpp  hle.h  mixers.h  shared_memory.h  source.h
src/core/aurora3ds/audio_core/lle/: lle.cpp
src/core/aurora3ds/core/: core.h  (+7 more)
src/core/aurora3ds/network/: CMakeLists.txt  network.cpp  packet.cpp  room_member.h  socket_manager.cpp
src/core/aurora3ds/network/artic_base/: artic_base_client.cpp  artic_base_client.h  artic_base_common.h
src/core/melonds/: ARM.cpp  CP15.cpp  DMA.cpp  DSi.cpp  DSi_I2C.cpp  FATStorage.cpp  GBACart.h  GPU.cpp  GPU2D_Soft.cpp  GPU3D.h  GPU3D_OpenGL.cpp  GPU_OpenGL.h  NDS.h  NDS_Header.h  OpenGLSupport.cpp  OpenGLSupport.h  Platform.h  platform_core.cpp  runtime.cpp.rej  runtime.hpp
src/core/module_cores/: core_adapter.hpp  core_adapter_registry.cpp
src/core/module_cores/nanoboyadvance/platform/: CMakeLists.txt
src/core/module_cores/nanoboyadvance/platform/include/platform/: emulator_thread.hpp
src/core/module_cores/nanoboyadvance/platform/src/loader/: rom.cpp
src/core/module_cores/nanoboyadvance/platform/src/writer/: save_state.cpp
src/core/nanoboyadvance/: core_adapter.cpp  gba_core_c_api.cpp  gba_core_c_api.h  runtime.cpp  runtime.hpp
src/core/quick_nes/: core_adapter.cpp  runtime.cpp  runtime.hpp
src/core/sameboy/: apu.c  c_api.c  cheat_search.c  core_adapter.cpp  gb.c  gb.h  joypad.c  memory.c  random.c  rewind.c  rumble.c  runtime.hpp  save_state.c  sgb.c  sm83_cpu.c  symbol_hash.c  timing.c
(+829 files in other folders)
